# Kirin-Gateway

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.debug  README.en.md  README.md  audit.toml  cliff.toml  config.benchmark.yaml  config.docker.yaml  config.example.en.yaml  config.example.zh.yaml  config.yaml  rustfmt.toml
.cargo/: audit.toml
.githooks/: GIT_HOOKS.md  pre-commit  pre-push  setup-hooks.sh
.github/workflows/: ci.yml  release-example.yml  release.yml
benchmark/: benchmark-README.md  benchmark.sh
docker/: Dockerfile  Dockerfile.debug  docker-compose.yml  prometheus.yml  traffic-gen.sh
docker/grafana/dashboards/: kirin-overview.json
docker/grafana/provisioning/datasources/: datasource.yml
docker/mock-upstream/: default.conf
docs/: ARCHITECTURE.md  config-reference.md
docs/note/: 中间件.md  代理层.md  传输安全.md  健康检查.md  可观测性.md  控制面.md  数据面.md  负载均衡.md  路由匹配-灰度发布.md  路由匹配.md  配置管理.md
docs/note/Filter_Chain/: AuthFilter.md  Filter Chain.md
scripts/: gen_cert.sh
src/: config.rs  control_plane.rs  data_plane.rs  main.rs
src/config/: loader.rs  types.rs  validation.rs
src/control_plane/: admin_api.rs  control_plane.rs  gateway_state.rs  health_check.rs
src/control_plane/admin_api/: dto.rs
src/data_plane/: filter.rs  middleware.rs  proxy.rs  rate_limit.rs  router.rs  upstream.rs
src/data_plane/filter/: auth.rs  header.rs  logging.rs  method.rs  rate_limit_filter.rs  whitelist.rs
src/data_plane/router/: router_white_list.rs
src/observability/: metrics.rs
tests/: integration_test.rs
