[package]
name = "kirin-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kirin-gw"
path = "src/main.rs"

[dependencies]
pingora-core = "0.8.0"
pingora-proxy = "0.8.0"
pingora-http = "0.8.0"
pingora-load-balancing = "0.8.0"
async-trait = "0.1.87"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.44", features = ["full"] }
hyper = { version = "1.7.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.16", features = ["tokio"] }
http-body-util = "0.1.1"
notify = "7.0.0"
serde_json = "1.0"
regex = "1.12.1"
jsonwebtoken = "10.0.0"
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
tempfile = "3"